--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/simple-keyboard/build/css/index.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -71,6 +72,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
+              "node_modules/simple-keyboard/build/css/index.css",
               "src/styles.scss"
             ],
             "assets": [
